# char_pp_paddlevideo

./: .env.example  .gitignore  .gitmodules  CODEBUDDY.md  README.md  pyproject.toml
.specify/integrations/: codebuddy.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
configs/: .gitkeep
configs/datasets/: .gitkeep  pingpong_competition_bmn.yaml  pingpong_custom.example.yaml  pingpong_public.yaml  ucf101.yaml
configs/examples/: .gitkeep  upstream_smoke.yaml
configs/inference/: .gitkeep  sliding_window.yaml
configs/models/: .gitkeep  bmn_pingpong.yaml  pp_tsm_extractor.yaml  pp_tsm_pingpong.yaml
data/splits/: .gitkeep
data/splits/pingpong_competition/: .last_class_table.json  test.meta.jsonl  test.txt  train.meta.jsonl  train.txt  val.meta.jsonl  val.txt
docs/: architecture-and-pipeline.md  v0.3.0-real-video-smoke.md  v0.3.1-classifier-smoke.md
experiments/: .gitkeep
requirements/: .gitkeep  base.txt  upstream-py311.txt
scripts/: .gitkeep  apply_upstream_patches.sh  bootstrap.sh  build_action_prototypes.py  export_pptsm_inference.py  prepare_bmn_inputs.py  wait_and_eval.sh
specs/001-pingpong-action-recognition/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pingpong-action-recognition/checklists/: constitution-compliance.md  reproducibility-checklist.md  requirements.md
specs/001-pingpong-action-recognition/contracts/: cli.md
specs/002-raw-video-feature-bmn/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-raw-video-feature-bmn/checklists/: requirements.md
specs/002-raw-video-feature-bmn/contracts/: cli.md
src/pingpong_av/: __init__.py
src/pingpong_av/cli/: __init__.py  build_feature_pkls.py  data_prepare.py  env_check.py  eval.py  extract_feat.py  infer_clip.py  infer_pkl.py  infer_rawvideo.py  infer_video.py  train.py
src/pingpong_av/data/: __init__.py  list_writer.py  public_datasets.py  splitter.py
src/pingpong_av/evaluation/: __init__.py  metrics.py  reporter.py
src/pingpong_av/experiment/: __init__.py  run_manifest.py
src/pingpong_av/extractors/: __init__.py  action_classifier.py  clip_id.py  ffmpeg_frames.py  manifest.py  pp_tsm_inference.py
src/pingpong_av/inference/: __init__.py  clip_runner.py  post_process.py  sliding_window.py  visualizer.py
src/pingpong_av/models/: __init__.py  bmn.py  pp_tsm.py  registry.py  videoswin_tennis.py
src/pingpong_av/upstream_adapter/: __init__.py  compat_py311.py  importer.py  trainer.py
src/pingpong_av/utils/: __init__.py  config.py  env.py  logging.py  seeding.py
tests/: __init__.py  conftest.py
tests/fixtures/: README.md
tests/integration/: __init__.py  test_build_feature_pkls_e2e.py  test_cli_smoke.py  test_env_check.py  test_infer_rawvideo_e2e.py
tests/unit/: __init__.py  test_build_feature_pkls.py  test_clip_id.py  test_config.py  test_metrics.py  test_post_process.py  test_pp_tsm_extractor.py  test_reporter_imbalance.py  test_reproducibility.py  test_splitter.py
